--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -38,7 +38,7 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${{ steps.commit.outputs.SHORT_SHA }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:novo  
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:stage  
 
   deploy:
     needs: build-and-push
