--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Necessário para obter o commit hash completo
+          fetch-depth: 0  
         
       - name: env create
         run: echo "${{secrets.ENV}}" >> .env
