--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -76,7 +76,7 @@ jobs:
   
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials cluster-dev \
+          gcloud container clusters get-credentials cluster-hml-central \
             --region ${{ secrets.GKE_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID_HML }}
   
